<resources>
    <string name="app_name">Game Reel</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="new_user">New User? </string>
    <string name="sign_up">Sign Up</string>
    <string name="game_reel">Game Reel</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="use_phone_or_email">Use Phone or Email</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_twitter">Continue with Twitter</string>
    <string name="aleady_have_an_account">Aleady have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="emailempty">Enter a valid email</string>
    <string name="passwordempty">Password should not be empty</string>
    <string name="confirmpasswordempty">Confirm password should not be empty</string>
    <string name="allfieldsrequired">Please enter valid credentials.</string>
    <string name="error_empty">This field should not be empty</string>
    <string name="profile_info">Profile Information</string>
    <string name="filter">Filter</string>
    <string name="apply">Apply</string>
    <string name="change_pass">Change Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brandan_delucia">Brandan Delucia</string>
    <string name="attacking_midfiolder">Attacking Midfiolder</string>
    <string name="barca_academy">Barca Academy</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="search">Search</string>
    <string name="search_msg">Search for chats or people</string>
    <string name="drawn_design">Drawn_design</string>
    <string name="kings_univercity">Kings Univercity</string>
    <string name="all_followers">All Followers</string>
    <string name="brandun_delucia">Brandun Delucia</string>
    <string name="menu">menu</string>
    <string name="back">Back</string>
    <string name="todo">TODO</string>
    <string name="all_follow">All Following</string>
    <string name="conversations">Conversations</string>
    <string name="messages">Messages</string>
    <string name="dot_menu">Dot Menu</string>
    <string name="type_a_message">Type a message</string>
    <string name="title_search">Search</string>
    <string name="title_add">Add</string>
    <string name="title_profile">Profile</string>
    <string name="title_share">Add</string>
    <string name="profile">Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="signup">Sign Up</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="nameempty">First Name should not be empty</string>
    <string name="firstnameempty">Name should not be empty</string>
    <string name="lastnameempty">Last Name should not be empty</string>
    <string name="dobnameempty">Date of birth should not be empty</string>
    <string name="nobileempty">Mobile Number should not be empty</string>
    <!--<string name="string_next">Next</string>-->


    <!-- fragment names -->
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="view_post_fragment">View Post</string>
    <string name="sign_out_fragment">Sign Out</string>
    <string name="profile_fragment">Profile</string>
    <string name="view_profile_fragment">ViewProfile</string>
    <string name="view_comments_fragment">View Comments</string>

    <!-- dialog names -->
    <string name="confirm_password_dialog">ConfirmPaswordDialog</string>

    <!-- Firebase messages -->
    <string name="auth_failed">Failed to Authenticate</string>
    <string name="auth_success">Authentication Success</string>

    <!-- Firebase database fields -->
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="dbname_following">following</string>
    <string name="dbname_followers">followers</string>
    <string name="dbname_stories">stories</string>

    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>
    <string name="field_user_id">user_id</string>
    <string name="field_likes">likes</string>
    <string name="field_caption">caption</string>
    <string name="field_date_created">date_created</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_tags">tags</string>
    <string name="field_image_path">image_path</string>
    <string name="field_comments">comments</string>
    <string name="field_comment">comment</string>
    <string name="field_image_uri">image_uri</string>
    <string name="field_video_uri">video_uri</string>
    <string name="field_story_id">story_id</string>
    <string name="field_views">views</string>
    <string name="field_duration">duration</string>
    <string name="field_profile_photo">profile_photo</string>
    <string name="field_timestamp">timestamp</string>


    <!-- photo types -->
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>

    <!-- Intent Extras -->
    <string name="calling_activity">calling_activity</string>
    <string name="selected_image">selected_image</string>
    <string name="selected_multiple_image">selected_multiple_image</string>
    <string name="selected_video">selected_video</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="intent_user">intent_user</string>
    <string name="user_stories">user_stories</string>

    <!-- Bundle arg names -->
    <string name="user_account_settings">user_account_settings</string>
    <string name="activity_number">activity_number</string>
    <string name="bundle_photo">bundle_photo</string>
    <string name="bundle_user_account_settings">bundle_user_account_settings</string>

    <!-- activity names -->
    <string name="profile_activity">Profile Activity</string>
    <string name="search_activity">Search Activity</string>
    <string name="home_activity">Home Activity</string>

    <!-- strings -->
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="video">VIDEO</string>
    <string name="string_open_camera">Open Camera</string>
    <string name="string_next">Next</string>
    <string name="string_share">Share</string>

    <!-- Dialog Names -->
    <string name="dialog_add_to_story">AddToStoryDialog</string>

    <!-- Easy Video Player Stuff -->
    <string name="evp_submit">SUBMIT</string>
    <string name="evp_retry">RETRY</string>

    <!-- Spring Header Stuff -->
    <string name="spring_header_behavior">tabian.com.instagramclonetest.springheader.SpringHeaderBehavior</string>
    <string name="dependent_view_behavior">tabian.com.instagramclonetest.DependentViewBehavior</string>

    <string name="simple_refresh_header_text_below_threshold">below fold</string>
    <string name="simple_refresh_header_text_above_threshold">above folder</string>
    <string name="simple_refresh_header_text_refreshing">refreshing...</string>

    <!-- JSON values -->
    <string name="bitmap">bitmap</string>

    <!-- Error Messages -->
    <string name="image_load_error">image_load_error</string>

    <!-- JSON keys -->
    <string name="media_type">media_type</string>
    <string name="duration">duration</string>
    <string name="encoded_bitmap">encoded_bitmap</string>
    <string name="width_scale_factor">width_scale_factor</string>
    <string name="height_scale_factor">height_scale_factor</string>
    <string name="video_uri">video_uri</string>
    <string name="surface_number">surface_number</string>
    <string name="rotations">rotations</string>
    <string name="resource_index">resource_index</string>
    <string name="media_index">media_index</string>
    <string name="media_source">media_source</string>

    <!-- Material Camera Stuff -->
    <string name="mcam_defaultDuration">00:00</string>
    <string name="mcam_permissions_needed">Permissions Needed</string>
    <string name="mcam_video_perm_warning">Permission to access your microphone and camera is needed, the camera will now close.</string>
    <string name="mcam_retry">RETRY</string>
    <string name="mcam_use_video">USE VIDEO</string>
    <string name="mcam_use_stillshot">USE STILLSHOT</string>
    <string name="mcam_portrait">Portrait</string>
    <string name="mcam_portrait_warning">It\'s recommended that you record in landscape. Record in portrait?</string>
    <string name="mcam_yes">Yes</string>
    <string name="mcam_error">Error</string>
    <string name="mcam_video_capture_unsupported">Your device does not support video capture.</string>
    <string name="mcam_no_audio_access">You haven\'t given access to your microphone; no audio will be recorded.</string>
    <string name="mcam_file_size_limit_reached">You\'ve reached the maximum file size!</string>
    <string name="mcam_image_preview_error_title">Image preview error</string>
    <string name="mcam_image_preview_error_message">Could not decode bitmap</string>
    <string name="internal_storage">Internal storage</string>
    <string name="open_gallery">OPEN GALLERY</string>


    <string name="selection_limiter_pix">Can\'t select more than %d items.</string>
    <string name="pix_bottom_message_without_video">Drag images up for gallery</string>
    <string name="pix_bottom_message_with_only_video">Drag videos up for gallery</string>
    <string name="pix_bottom_message_with_video">Hold for video, tap for photo</string>
    <string name="pix_ok">OK</string>
    <string name="pix_tap_to_select">Tap photo to select</string>
    <string name="pix_selected">Selected</string>
    <string name="pix_recent">Recent</string>
    <string name="pix_last_month">Last Month</string>
    <string name="pix_last_week">Last Week</string>
    <string name="cannot_click_image_pix">Can not add more than %s images</string>
    <string name="next">Next</string>
    <string name="write_a_caption">Write a caption</string>
    <string name="explore">Explore</string>
    <string name="post">Posts</string>
    <string name="no_post_yet">NO POST YET</string>
    <string name="profile_update">Profile Update</string>
    <string name="name">Name</string>
    <string name="dob">Dob (yyyy-MM-dd)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="camera_and_location_rationale">Please grant camera permission to update profile image</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="remove">Remove</string>

</resources>
