<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/game_reel"
        android:textColor="@color/white"
        android:textSize="@dimen/_32ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/event_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/event_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <LinearLayout
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/userLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bg_rect1"
            android:drawableStart="@drawable/ic_account_circle_black_24dp"
            android:drawableLeft="@drawable/ic_account_circle_black_24dp"
            android:drawableTint="@color/white"
            android:gravity="center"
            android:onClick="moveToLoginActivity"
            android:padding="@dimen/_12sdp"
            android:text="@string/use_phone_or_email"
            android:textColor="@color/whitealpha" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/login_bg_rect1"
            android:drawableStart="@drawable/ic_account_circle_black_24dp"
            android:drawableLeft="@drawable/ic_account_circle_black_24dp"
            android:drawableTint="@color/white"
            android:gravity="center"
            android:padding="@dimen/_12sdp"
            android:text="@string/continue_with_facebook"
            android:textColor="@color/whitealpha" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/login_bg_rect1"
            android:drawableStart="@drawable/ic_account_circle_black_24dp"
            android:drawableLeft="@drawable/ic_account_circle_black_24dp"
            android:drawableTint="@color/white"
            android:gravity="center"
            android:padding="@dimen/_12sdp"
            android:text="@string/continue_with_google"
            android:textColor="@color/whitealpha" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/login_bg_rect1"
            android:drawableStart="@drawable/ic_account_circle_black_24dp"
            android:drawableLeft="@drawable/ic_account_circle_black_24dp"
            android:drawableTint="@color/white"
            android:gravity="center"
            android:padding="@dimen/_12sdp"
            android:text="@string/continue_with_twitter"
            android:textColor="@color/whitealpha" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:onClick="moveToSignUpActivity"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aleady_have_an_account"
                android:textAllCaps="true"
                android:textColor="@color/whitealpha" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_4sdp"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bottom_line_white"
            android:gravity="center"
            android:text="@string/terms_amp_conditions"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/whitealpha"
            android:textStyle="normal" />

        <!--<FrameLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="@dimen/_16sdp">-->

        <!--<TextView-->
        <!--android:layout_width="@dimen/_110sdp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:gravity="center"-->
        <!--android:text="Terms &amp; Conditions"-->
        <!--android:textAlignment="center"-->
        <!--android:textAllCaps="false"-->
        <!--android:textColor="@color/whitealpha"-->
        <!--android:textStyle="normal" />-->

        <!--<View-->
        <!--android:layout_width="@dimen/_100sdp"-->
        <!--android:layout_height="1dp"-->
        <!--android:layout_gravity="center|bottom"-->
        <!--android:background="@color/white" />-->
        <!--</FrameLayout>-->


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>